kubernetes/apps/media/seerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr-internal
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: saradomin-internal-ca
spec:
  ingressClassName: traefik
  rules:
    - host: seerr.saradomin
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  number: 5055
  tls:
    - hosts:
        - seerr.saradomin
      secretName: seerr-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr-cloudflare
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: request.ftm.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  number: 5055
